--- a/.gitignore
+++ b/.gitignore
@@ -199,8 +199,7 @@ Backup*/
 UpgradeLog*.XML
 UpgradeLog*.htm
 
-# SQL Server files
-*.mdf
+# SQL Server files *.mdf
 *.ldf
 
 # Business Intelligence projects
