--- a/WebApplication1/TestTaskApp.csproj
+++ b/WebApplication1/TestTaskApp.csproj
@@ -187,6 +187,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\DatabaseContext.cs" />
+    <Compile Include="Models\DataInitializer.cs" />
     <Compile Include="Models\Identity\IdentityStore.cs" />
     <Compile Include="Models\Identity\LoginViewModel.cs" />
     <Compile Include="Models\Identity\RegisterViewModel.cs" />
